Hice el proyecto mas modular (Usando el "include" de PHP)

--- a/HTML/carousel.html
+++ b/HTML/carousel.html
@@ -45,9 +45,9 @@
         </button>
 
         <div class="carousel_lista">
-            <div class="carousel_elemento"><img src="imagen-1.jpg" alt=""></div>
-            <div class="carousel_elemento"><img src="imagen-2.jpg" alt=""></div>
-            <div class="carousel_elemento"><img src="imagen-3.jpeg" alt=""></div>
+            <div class="carousel_elemento"><img src="Images/imagen-1.jpg" alt=""></div>
+            <div class="carousel_elemento"><img src="Images/imagen-2.jpg" alt=""></div>
+            <div class="carousel_elemento"><img src="Images/imagen-3.jpeg" alt=""></div>
         </div>
        
         <button aria-label="Siguiente" class="carousel_siguiente">
