--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -12,8 +12,8 @@
         </button>
         <div class="collapse navbar-collapse" id="toggleMobileMenu">
             <ul class="navbar-nav me-auto">
-                <li><a href="#" class="nav-link active" aria-current="true">Principal</a></li>
-                <li><a href="ayuda.html" class="nav-link">Centro de Ayuda</a></li>
+                <li><a href="index.php" class="nav-link active" aria-current="true">Principal</a></li>
+                <li><a href="ayuda.php" class="nav-link">Centro de Ayuda</a></li>
             </ul>  
         </div>
     </div>
