--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -1,20 +1,26 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark bg-gradient">
+<nav class="navbar navbar-expand-md navbar-dark bg-success bg-gradient">
     <div class="container-fluid">
         <a href="" class="navbar-brand">Practica UNAJ</a>
-        <button class="navbar-toggler" 
-            type="button" 
-            data-bs-toggle="collapse" 
-            data-bs-target="#toggleMobileMenu" 
-            aria-controls="togggleMobileMenu" 
-            aria-expanded="false" 
-            aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="togggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="toggleMobileMenu">
             <ul class="navbar-nav me-auto">
-                <li><a href="index.php" class="nav-link active" aria-current="true">Principal</a></li>
+                <li><a href="index.php" class="nav-link" aria-current="true">Principal</a></li>
                 <li><a href="ayuda.php" class="nav-link">Centro de Ayuda</a></li>
-            </ul>  
+            </ul>
         </div>
     </div>
 </nav>
+
+
+<script>
+    let filename = window.location.pathname.split("/").pop();
+    filename = filename === "" ? "index.php" : filename;
+    $(".navbar-nav .nav-link").each(function() {
+        if ($(this).attr('href') == filename) {
+            $(this).addClass("active");
+            $(this).attr("aria-current", "true");
+        }
+    });
+</script>
