--- a/HTML/footer.html
+++ b/HTML/footer.html
@@ -1,11 +1,4 @@
-<footer class="bg-success bg-gradient pt-4 pb-1 px-3">
-    <div class="d-flex justify-content-center  flex-wrap">
-        <h1 class="display-5 w-100 text-center text-light">Contactenos</h1>
-        <a href=""><i class="fab fa-instagram fa-2x px-2"></i></a>
-        <a href=""><i class="fab fa-facebook fa-2x px-2" ></i></a>
-        <a href=""><i class="fab fa-twitter fa-2x px-2"></i></a>
-        <a href=""><i class="fab fa-pinterest fa-2x px-2"></i></a>
-    </div>
+<footer class="bg-success bg-gradient mt-3 pt-4 pb-1 px-3">
     <p class="copyright">
         <i class="far fa-copyright"></i>
         <span class="text-light" id="copyright-text">Copyright XXXX - </span>
