--- a/HTML/navbar.html
+++ b/HTML/navbar.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="toggleMobileMenu">
             <ul class="navbar-nav me-auto">
                 <li><a href="index.php" class="nav-link">Principal</a></li>
-                <li><a href="ayuda.php" class="nav-link">Centro de Ayuda</a></li>
+                <li><a href="ayuda.php" class="nav-link">Mas informacion</a></li>
             </ul>
         </div>
     </div>
